<resources>
    <string name="app_name">AvaDroid</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_register">Login/Register</string>
    <string name="new_transaction">New Transaction</string>
    <string name="view_invoices">View Invoices</string>
    <string name="search_product_list">Search product list</string>
    <string name="submit">Submit</string>
    <string name="new_invoice">New invoice</string>
    <string name="add_product">Add product</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="review_invoice">Review Invoice</string>
    <string name="welcome_to_avadroid">Welcome to AvaDroid</string>
    <string name="result">Result</string>
    <string name="is_this_item_taxable">Is this Item Taxable?</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="_0_00">0.00%</string>
    <string name="tax_region">Tax Region</string>
    <string name="tax_code">Tax Code</string>
    <string name="finish">Finish</string>
    <string name="just_enter_some_basic_information_below_to_find_out_if_your_products_are_taxable_and_at_what_rate">Just enter some basic information below to find out if your products are taxable and at what rate.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
</resources>
