<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTransactionActivity">

    <TextView
        android:id="@+id/review_invoice_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_invoice"
        android:textSize="24dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/review_invoice_recycler"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/review_invoice_controls"
        app:layout_constraintTop_toBottomOf="@id/review_invoice_msg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="20dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/review_invoice_controls"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_invoice"
            android:text="@string/cancel"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/submit_new_invoice_btn"
            android:text="@string/submit"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>