<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTransactionActivity">

        <TextView
            android:id="@+id/new_invoice_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_invoice"
            android:textSize="24dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/product_invoice_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/new_invoice_msg">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/product_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/product_invoice_recycler">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product"
                android:textSize="20sp"/>

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </SearchView>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/add_product_controls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/product_search_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantity: "
            android:textSize="18sp" />

        <Button
            android:id="@+id/decrement_quantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="-" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/increment_quantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="+" />

        <Button
            android:id="@+id/add_product_to_invoice_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>



    <Button
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>